Add support for modifying inline styles in devtools